--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
--asygui==0.97
 asn1crypto==0.24.0
 bcrypt==3.1.7
 cffi==1.12.3
 cryptography==2.7
-easygui===0.98.0-unreleased
 future==0.17.1
 netmiko==2.4.1
 paramiko==2.6.0
 pycparser==2.19
 PyNaCl==1.3.0
 pyserial==3.4
+PySimpleGUI==4.3.2
 scp==0.13.2
 six==1.12.0
 textfsm==1.1.0
